--- a/modules/theme/client/less/outset.less
+++ b/modules/theme/client/less/outset.less
@@ -565,7 +565,8 @@ img.user-profile-picture {
   }
 
   &.headline-map-bg {
-    background: #0e2d4c url('/modules/core/img/intro/western-map.jpg') no-repeat 50% 50% !important;
+    background: #0e2d4c url('/modules/core/img/intro/western-map.jpg') no-repeat 50% 50% /cover !important;
+    .background-size(cover);
   }
 
   &.headline-static {
